test/Errors/valid.elab
Axiom p : Prop
Theorem good : Prop := p